# auth-bot

./: README.md  bot.py  data.db  oauth2.py  putuseringuild.py  refresh_token.py  requirements.txt
commands/: owner.py
package-stuff-ignore/: pyproject.toml  setup.py
package-stuff-ignore/noms-auth/: auth.py
templates/: index.html
