[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noms-auth"
version = "1.0"
authors = [
  { name="asov", email="noemtdev@gmail.com" },
]
description = "A package that allows you to import a module to backup your members!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=['python', 'discord', 'backup', 'members']

[project.urls]
"Homepage" = "https://github.com/noemtdev/auth-package"
"Bug Tracker" = "https://github.com/noemtdev/auth-package/issues"